--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,8 +9,10 @@
     <script src="js/lib/aframe-ar.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/html2canvas.min.js"></script>
+    <script src="js/ScriptBridge.js"></script>
 
-  </head>
+</head>
 
   <body style="margin: 0px; overflow: hidden;">
     <a-scene embedded arjs vr-mode-ui="enabled: false" copycanvas>
